lab1/Test/L1-A-11-25.output
Error Type B at Line 1
Error Type B at Line 5
Error Type B at Line 10
Error Type B at Line 34
